fixed icon logo-ibaja heigth spacing

--- a/frontend/styles/site/common.less
+++ b/frontend/styles/site/common.less
@@ -95,6 +95,7 @@ body {
     font-size: 200px;
     color: white;
     text-decoration: none;
+    vertical-align: bottom;
   }
 }
 
@@ -192,10 +193,10 @@ body {
       > .row {
         margin: 0;
         padding: 0;
-        height: 18%;
+        height: 15%;
 
         &.logo {
-          height: 42%;
+          height: 45%;
         }
       }
     }
@@ -206,10 +207,10 @@ body {
       > .row {
         margin: 0;
         padding: 0;
-        height: 10%;
+        height: 6%;
 
         &.logo {
-          height: 40%;
+          height: 46%;
         }
       }
     }
