--- a/frontend/styles/site/menu.less
+++ b/frontend/styles/site/menu.less
@@ -39,6 +39,11 @@
 	z-index: 20;
 
 	.menu {
+		a{
+			&.profile{
+				padding-right: 15px;
+			}
+		}
 		box-shadow: none;
 		background-color: transparent;
 
